--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monster",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://benztammasorn.github.io/monsters-rolodex",
+  "homepage": "https://benztammasorn.github.io/monsters-rolodex/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
